--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,7 @@
   "foldHeading": true,
   "showLineNumber": true,
   "lineWrap": false,
-  "readableLineLength": false
+  "readableLineLength": false,
+  "legacyEditor": false,
+  "livePreview": true
 }
